# AI-Deploy

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODEX.md  Cargo.toml  DEVELOPMENT.md  README.md  deny.toml  opsctl-idea.html
docs/: AI_INTEGRATION.md  ARCHITECTURE.md  DEBIAN_INSTALL.md  MANAGED_PROJECTS.md  PRIVILEGED_HELPER.md  PRODUCTION_DELIVERY_HANDOFF.md  QUALITY.md  REGISTRY_SCHEMA.md  SECURITY.md
schemas/: approvals.schema.yml  backups.schema.yml  domains.schema.yml  plans.schema.yml  policies.schema.yml  ports.schema.yml  retention-attestation.schema.yml  services.schema.yml  snapshots.schema.yml  volumes.schema.yml
scripts/: build-deb.sh  capture-production-upgrade-state.sh  check-release-identity.sh  e2e-digitalocean.sh  e2e-evidence-archive-local.sh  e2e-recovery-engine-lab.sh  e2e-volume-protect-local.sh  install-debian.sh  install-sudoers.sh  production-onboarding-check.sh  rehearse-production-package-upgrade.sh  rehearse-production-upgrade.sh  release-gate.sh  release-verify.sh  release.sh  test-deb-install.sh  test-failure-matrix.sh  test-managed-delivery-templates.sh  test-production-upgrade-rehearsal.sh
src/: analyze.rs  approvals.rs  audit.rs  backup.rs  backup_schedule.rs  cleanup_evidence.rs  cli.rs  command_runner.rs  delivery.rs  deploy.rs  doctor.rs  drift.rs  env_source.rs  evidence_archive.rs  evidence_backfill.rs  evidence_crypto.rs  evidence_retention.rs  gates.rs  health_controller.rs  importer.rs  install_check.rs  lockfile.rs  main.rs  managed_project.rs  mcp.rs  paths.rs  plan.rs  policy.rs  recovery_governance.rs  recovery_lab.rs  (+15 more)
(+90 files in other folders)
