[package]
name = "opsctl"
version = "0.6.3"
edition = "2024"
description = "Lightweight single-server deployment safety gate for AI-assisted operations"
license = "MIT"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive", "env"] }
crossterm = "0.29"
ed25519-dalek = "3.0"
fs2 = "0.4"
jsonschema = { version = "0.46.9", default-features = false }
libc = "0.2"
ratatui = { version = "0.30", default-features = false, features = ["crossterm"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
tar = "0.4"
time = { version = "0.3", features = ["formatting", "macros", "parsing", "serde"] }
wait-timeout = "0.2"
zeroize = "1"
zstd = "0.13"

[dev-dependencies]
assert_cmd = "2"
insta = { version = "1", features = ["json", "yaml"] }
predicates = "3"
rstest = "0.23"
tempfile = "3"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
dbg_macro = "warn"
expect_used = "warn"
panic = "warn"
print_stderr = "warn"
print_stdout = "warn"
todo = "warn"
unimplemented = "warn"
unwrap_used = "warn"
